changed the changeuser info to only change password.

--- a/app/src/main/res/layout/fragment_tab5_settings.xml
+++ b/app/src/main/res/layout/fragment_tab5_settings.xml
@@ -24,7 +24,7 @@
         android:id="@+id/change_user_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change User Details"
+        android:text="Change Password"
         android:onClick="launch"
         />
 
