--- a/app/src/main/res/layout/fragment_tab5_settings.xml
+++ b/app/src/main/res/layout/fragment_tab5_settings.xml
@@ -11,12 +11,30 @@
         android:layout_height="wrap_content"
         android:text="@string/tab5_string" />
 
-    <!--<Button-->
-        <!--android:id="@+id/logout_button"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Logout"-->
-        <!--/>-->
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        />
+
+
+
+    <Button
+        android:id="@+id/change_user_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change Password"
+        android:onClick="launch"
+        />
+
+
+
+    <Button
+        android:id="@+id/share_button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Share this app"/>
 
 
 </LinearLayout>
