--- a/app/src/main/res/layout/fragment_change_user_info_dialog.xml
+++ b/app/src/main/res/layout/fragment_change_user_info_dialog.xml
@@ -9,5 +9,6 @@
         android:id="@+id/passbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/password"/>
+        android:hint="@string/password"
+        android:inputType="textPassword"/>
 </LinearLayout>
